--- a/AnalysysDemo/AnalysysDemo/Info.plist
+++ b/AnalysysDemo/AnalysysDemo/Info.plist
@@ -27,8 +27,21 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>6.0</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>Analysys</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>analysysapp</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
-	<string>56</string>
+	<string>212</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
