【新增功能】 1. 推送新增自定义参数; 2. 新增是否上报设备标识配置; 3. 新增设置数据网络上传策略接口; 4. 新增清除本地所有已缓存数据接口;
【功能优化】
部分功能优化

--- a/Example/AnalysysSDK/DataSource.plist
+++ b/Example/AnalysysSDK/DataSource.plist
@@ -43,6 +43,12 @@
 				<key>backgroundColor</key>
 				<string>#A9A9A9</string>
 			</dict>
+			<dict>
+				<key>interface</key>
+				<string>清理数据库</string>
+				<key>backgroundColor</key>
+				<string>#A9A9A9</string>
+			</dict>
 		</array>
 	</dict>
 	<dict>
@@ -295,6 +301,19 @@
 			<dict>
 				<key>interface</key>
 				<string>复制粘贴板</string>
+				<key>backgroundColor</key>
+				<string>#A9A9A9</string>
+			</dict>
+		</array>
+	</dict>
+	<dict>
+		<key>category</key>
+		<string>调整数据上传网络</string>
+		<key>subArray</key>
+		<array>
+			<dict>
+				<key>interface</key>
+				<string>修改上传网络</string>
 				<key>backgroundColor</key>
 				<string>#A9A9A9</string>
 			</dict>
