--- a/AnalysysDemo/AnalysysDemo/DataSource.plist
+++ b/AnalysysDemo/AnalysysDemo/DataSource.plist
@@ -43,6 +43,12 @@
 				<key>backgroundColor</key>
 				<string>#A9A9A9</string>
 			</dict>
+			<dict>
+				<key>interface</key>
+				<string>清理数据库</string>
+				<key>backgroundColor</key>
+				<string>#A9A9A9</string>
+			</dict>
 		</array>
 	</dict>
 	<dict>
@@ -258,6 +264,19 @@
 				<string>WKWebView</string>
 				<key>backgroundColor</key>
 				<string>#1E90FF</string>
+			</dict>
+		</array>
+	</dict>
+	<dict>
+		<key>category</key>
+		<string>调整数据上传网络</string>
+		<key>subArray</key>
+		<array>
+			<dict>
+				<key>interface</key>
+				<string>修改上传网络</string>
+				<key>backgroundColor</key>
+				<string>#A9A9A9</string>
 			</dict>
 		</array>
 	</dict>
