iOS SDK 4.5.4 release

--- a/AnalysysSDK/Resources/AnalysysAgent.bundle/DefaultLifeCycleConfig.json
+++ b/AnalysysSDK/Resources/AnalysysAgent.bundle/DefaultLifeCycleConfig.json
@@ -31,6 +31,18 @@
         "start":"ANSVisualHybrid.setScriptMessage:",
         "finished":""
     },
+    "VisualWebViewAgentGetEventList":{
+        "start":"ANSVisualHybrid.analysysAgentGetEventList:",
+        "finished":""
+    },
+    "VisualWebViewAgentGetProperty":{
+        "start":"ANSVisualHybrid.analysysAgentGetProperty:withParams:",
+        "finished":""
+    },
+    "VisualWebViewAgentTrack":{
+        "start":"ANSVisualHybrid.analysysAgentTrack:withParams:",
+        "finished":""
+    },
     "PushParse":{
         "start":"AnalysysPush.parseAnsPushInfo:",
         "finished":""
