--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,4 @@ xcuserdata/
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
 # Pods/
-
+AnalysysSDK/.DS_Store
